# wrtype

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  build.rs  flake.nix  justfile  run-examples.sh
docs/: book.toml  default.nix
docs/src/: README.md  SUMMARY.md  architecture.md  building.md  commands.md  contributing.md  examples.md  installation.md  quick-start.md  unicode-support.md  wayland-protocol.md  xkb-keymaps.md
examples/: README.md  advanced_sequences.rs  basic_typing.rs  shortcuts.rs  stdin_processing.rs
examples/advanced_sequences/: Cargo.toml
examples/advanced_sequences/src/: main.rs
examples/basic_typing/: Cargo.toml
examples/basic_typing/src/: main.rs
examples/shortcuts/: Cargo.toml
examples/shortcuts/src/: main.rs
examples/stdin_processing/: Cargo.toml
examples/stdin_processing/src/: main.rs
src/: executor.rs  keymap.rs  lib.rs  main.rs  wayland.rs
