[package]
name = "wrtype"
version = "0.1.0"
edition = "2021"
description = "A Rust implementation of wtype - xdotool type for Wayland"
license = "MIT"
authors = ["connerohnesorge"]
repository = "https://github.com/conneroisu/wrtype"

[lib]
name = "wrtype"
path = "src/lib.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
wayland-client = "0.31"
wayland-protocols = { version = "0.32", features = ["client", "unstable"] }
wayland-scanner = "0.31"
wayland-backend = "0.3"
xkbcommon = "0.7"
anyhow = "1.0"
thiserror = "1.0"
unicode-width = "0.1"
tempfile = "3.0"

[[bin]]
name = "wrtype"
path = "src/main.rs"
