[workspace]
members = [
    ".",
    "examples/basic_typing",
    "examples/shortcuts", 
    "examples/advanced_sequences",
    "examples/stdin_processing",
]

[package]
name = "wrtype"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
description = "A Rust implementation of wtype - a Wayland virtual keyboard tool that types text and sends key events"
license = "MIT"
authors = ["connerohnesorge <conneroisu@outlook.com>"]
repository = "https://github.com/conneroisu/wrtype"
homepage = "https://github.com/conneroisu/wrtype"
documentation = "https://docs.rs/wrtype"
readme = "README.md"
keywords = ["wayland", "keyboard", "typing", "automation", "xdotool"]
categories = ["command-line-utilities", "os::unix-apis", "accessibility", "development-tools"]
exclude = [
    ".github/",
    "*.nix",
    "flake.*",
    "justfile",
    "result*",
    "shell.nix",
    ".envrc",
    ".direnv/",
]

[lib]
name = "wrtype"
path = "src/lib.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
wayland-client = "0.31"
wayland-protocols = { version = "0.32", features = ["client", "unstable"] }
wayland-scanner = "0.31"
wayland-backend = "0.3"
xkbcommon = "0.7"
anyhow = "1.0"
thiserror = "1.0"
unicode-width = "0.1"
tempfile = "3.0"

[[bin]]
name = "wrtype"
path = "src/main.rs"
